<resources>
    <string name="app_name">执着</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="btn_Jia">+</string>
    <string name="btn_Jian">-</string>
    <string name="btn_Cheng">×</string>
    <string name="btn_Chu">÷</string>
    <string name="btn_Denyu">=</string>
    <string name="btn_Baifenbi">%</string>
    <string name="btn_Del">←</string>
    <string name="btn_Andel">C</string>
    <string name="btn_Dian">.</string>
</resources>
