<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="zhizhuo.a19960216.com.zhizhuocalculator.MainActivity">

    <TableRow
        android:layout_height="160sp"
        android:layout_width="match_parent"
        android:id="@+id/TbrTop">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="160sp"
            android:gravity="right|bottom"
            android:textSize="50sp"
            android:background="#0C1019"
            android:textColor="#D5D7D4"
            android:id="@+id/tvxiansi" />
    </TableRow>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/TbrTop"
        android:background="#0C131B">

        <TableRow
            android:id="@+id/TbrTop1"
            android:background="#0C131B"
            android:layout_width="match_parent"
            android:layout_height="85dip"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/btnC"
                android:layout_width="90dip"
                android:layout_height="85dip"
                android:padding="20dp"
                android:text="@string/btn_Andel"
                android:textColor="#FDFDFD"
                android:background="#0C131B"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/btndel"
                android:layout_width="90dip"
                android:layout_height="85dip"
                android:padding="20dp"
                android:text="@string/btn_Del"
                android:textColor="#FDFDFD"
                android:background="#0C131B"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/btnbaifenbi"
                android:layout_width="90dip"
                android:layout_height="85dip"
                android:padding="20dp"
                android:text="@string/btn_Baifenbi"
                android:textColor="#FDFDFD"
                android:background="#0C131B"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/btnchu"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:text="@string/btn_Chu"
                android:textColor="#FDFDFD"
                android:elevation="0dp"
                android:background="#0C131B"
                android:textSize="30sp"/>
        </TableRow>
        <TableRow
            android:id="@+id/TbrTop2"
            android:background="#0C131B"
            android:layout_width="match_parent"
            android:layout_below="@+id/TbrTop1"
            android:layout_height="85dip"
            >
            <Button
                android:id="@+id/btn7"
                android:layout_width="90dip"
                android:layout_height="85dip"
                android:padding="20dp"
                android:text="@string/btn_7"
                android:textColor="#FDFDFD"
                android:background="#0C131B"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/btn8"
                android:layout_width="90dip"
                android:layout_height="85dip"
                android:padding="20dp"
                android:text="@string/btn_8"
                android:textColor="#FDFDFD"
                android:background="#0C131B"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/btn9"
                android:layout_width="90dip"
                android:layout_height="85dip"
                android:padding="20dp"
                android:text="@string/btn_9"
                android:textColor="#FDFDFD"
                android:background="#0C131B"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/btncheng"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:text="@string/btn_Cheng"
                android:textColor="#FDFDFD"
                android:background="#0C131B"
                android:textSize="30sp"/>
        </TableRow>

        <TableRow
            android:id="@+id/TbrTop3"
            android:background="#0C131B"
            android:layout_width="match_parent"
            android:layout_below="@+id/TbrTop2"
            android:layout_height="85dip"
            >
            <Button
                android:id="@+id/btn4"
                android:layout_width="90dip"
                android:layout_height="85dip"
                android:padding="20dp"
                android:text="@string/btn_4"
                android:textColor="#FDFDFD"
                android:background="#0C131B"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/btn5"
                android:layout_width="90dip"
                android:layout_height="85dip"
                android:padding="20dp"
                android:text="@string/btn_5"
                android:textColor="#FDFDFD"
                android:background="#0C131B"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/btn6"
                android:layout_width="90dip"
                android:layout_height="85dip"
                android:padding="20dp"
                android:text="@string/btn_6"
                android:textColor="#FDFDFD"
                android:background="#0C131B"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/btnjian"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:text="@string/btn_Jian"
                android:textColor="#FDFDFD"
                android:background="#0C131B"
                android:textSize="30sp"/>
        </TableRow>

        <TableRow
            android:id="@+id/TbrTop4"
            android:background="#0C131B"
            android:layout_width="match_parent"
            android:layout_below="@+id/TbrTop3"
            android:layout_height="85dip"
            >
            <Button
                android:id="@+id/btn1"
                android:layout_width="90dip"
                android:layout_height="85dip"
                android:padding="20dp"
                android:text="@string/btn_1"
                android:textColor="#FDFDFD"
                android:background="#0C131B"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/btn2"
                android:layout_width="90dip"
                android:layout_height="85dip"
                android:padding="20dp"
                android:text="@string/btn_2"
                android:textColor="#FDFDFD"
                android:background="#0C131B"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/btn3"
                android:layout_width="90dip"
                android:layout_height="85dip"
                android:padding="20dp"
                android:text="@string/btn_3"
                android:textColor="#FDFDFD"
                android:background="#0C131B"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/btnjia"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:text="@string/btn_Jia"
                android:textColor="#FDFDFD"
                android:background="#0C131B"
                android:textSize="30sp"/>
        </TableRow>

        <TableRow
            android:id="@+id/TbrTop5"
            android:background="#0C131B"
            android:layout_width="match_parent"
            android:layout_below="@+id/TbrTop4"
            android:layout_height="85dip"
            >
            <Button
                android:id="@+id/btn0"
                android:layout_width="180dip"
                android:layout_height="85dip"
                android:padding="20dp"
                android:text="@string/btn_0"
                android:textColor="#FDFDFD"
                android:background="#0C131B"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/btndian"
                android:layout_width="90dip"
                android:layout_height="85dip"
                android:padding="20px"
                android:text="@string/btn_Dian"
                android:textColor="#FDFDFD"
                android:background="#0C131B"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/btndenyu"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:text="@string/btn_Denyu"
                android:textColor="#FDFDFD"
                android:background="#0C131B"
                android:textSize="30sp"/>
        </TableRow>
    </RelativeLayout>
</RelativeLayout>

